fix theme flicker (#81)
* fix theme flicker

* cleanup

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -259,7 +259,7 @@
 
   ::view-transition-new(page) {
     animation: slide-in .3s var(--ease-out-expo) both;
-    /* animation-delay: .3s; */
+    animation-delay: .3s;
   }
 }
 
